2007-10-13  Tobias Schlueter  <tobi@gcc.gnu.org>     Paul Thomas  <pault@gcc.gnu.org>

PR fortran/33254
PR fortran/33727
fortran/
* trans-array.c (get_array_ctor_var_strlen): Check upper bound for
constness instead of lower bound.
(get_array_ctor_strlen): Add bounds-checking code.
testsuite/
* bounds_check_10.f90: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129286 138bc75d-0d04-0410-961f-82ee72b054a4